// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TaskList default 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <app-task-list
        ng-reflect-tasks="[object Object],[object Object"
      >
        <div
          class="list-items"
        >
          
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          
          
        </div>
      </app-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList empty 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <app-task-list
        ng-reflect-tasks=""
      >
        <div
          class="list-items"
        >
          
          
          <div
            class="wrapper-message"
          >
            <span
              class="icon-check"
            />
            <div
              class="title-message"
            >
              You have no tasksInOrder
            </div>
            <div
              class="subtitle-message"
            >
              Sit back and relax
            </div>
          </div>
          
        </div>
      </app-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList loading 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <app-task-list
        loading="true"
        ng-reflect-loading="true"
        ng-reflect-tasks=""
      >
        <div
          class="list-items"
        >
          
          
          
          <div>
            
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
            <div
              class="loading-item"
            >
              <span
                class="glow-checkbox"
              />
              <span
                class="glow-text"
              >
                <span>
                  Loading
                </span>
                <span>
                  cool
                </span>
                <span>
                  state
                </span>
              </span>
            </div>
          </div>
        </div>
      </app-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots TaskList withPinnedTasks 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <div
      style="padding: 3rem"
    >
      <app-task-list
        ng-reflect-tasks="[object Object],[object Object"
      >
        <div
          class="list-items"
        >
          
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_PINNED"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          <app-task-item
            ng-reflect-task="[object Object]"
          >
            
            <div
              class="list-item TASK_INBOX"
            >
              <label
                class="checkbox"
              >
                <input
                  disabled="true"
                  name="checked"
                  type="checkbox"
                />
                <span
                  class="checkbox-custom"
                />
              </label>
              <div
                class="title"
              >
                <input
                  placeholder="Input title"
                  readonly="true"
                  type="text"
                />
              </div>
              <div
                class="actions"
              >
                
                <a>
                  <span
                    class="icon-star"
                  />
                </a>
              </div>
            </div>
          </app-task-item>
          
          
        </div>
      </app-task-list>
    </div>
  </ng-component>
</storybook-dynamic-app-root>
`;
